Bug 118696 - Navigator: View move outside the document when selecting a shape in the navigator
Summary: Navigator: View move outside the document when selecting a shape in the navig...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.2.0 target:7.5.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-11 15:13 UTC by Xisco Faulí
Modified: 2022-07-30 03:25 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-07-11 15:13:25 UTC
Steps to reproduce:
1. Open attachment 142750 [details] from bug 118168
2 Open the navigator ( shift + Ctrl + F5 )
3. Double-click on Straight Arrow Connector 39

-> View moves outside of the document

Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: 4b345f95ce7cb09011892bf465cfdf3811adaf8e
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

and

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 1 Jim Raykowski 2018-07-13 01:12:52 UTC
I confirm. 

Here is a patch:
https://gerrit.libreoffice.org/#/c/57379/
Comment 2 Commit Notification 2018-09-05 09:35:27 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3c86ffd8ded628e6f2b4187948a1b1056f6a0f56

tdf#118696 impress navigator: zoom slide/slide object on select

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-07-30 03:25:09 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d87f69cc7e5a6f5c8a79075fed343a14675f3a5d

tdf#118696 better fix for sd Navigator object selection

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.