tdf#118696 impress navigator: zoom slide/slide object on select

Change-Id: I5656c99f72fb94c791282bbf2fcf5044bcdd8a7a
Reviewed-on: https://gerrit.libreoffice.org/57379
Tested-by: Jenkins
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>